# MoneyInOne

./: .env.fastlane.example  .gitignore  Gemfile  README.md  RELEASE.md
backend/: .coverage  .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2024_01_01_0000-001_initial_schema.py
backend/app/: __init__.py  init_db.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: assets.py  credits.py  health.py  market_data.py  metadata.py  portfolio.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  asset.py  base.py  credit.py  price.py  schemas.py  user.py
backend/app/services/: __init__.py  asset_service.py  exceptions.py  finance_service.py  market_data_service.py
backend/moneyinone_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: drop_asset_columns.py  init-db.sql
backend/tests/: conftest.py  test_api.py  test_api_external.py  test_currency_conversion.py  test_models.py  test_services.py
docs/: APP_STORE_METADATA.md  APP_STORE_SUBMISSION_GUIDE.md  NEXT_STEPS.md  PRIVACY_POLICY_TEMPLATE.md  SUBMISSION_CHECKLIST.md  _config.yml  app_rd.md  architecture.md  backend_rd.md  frontend_rd.md  privacy-policy.html  privacy.md  scratchpad.md  ui_modernization_complete.md
fastlane/: Appfile  Fastfile  Matchfile
fastlane/metadata/en-US/: copyright.txt  description.txt  keywords.txt  marketing_url.txt  name.txt  privacy_url.txt  release_notes.txt  subtitle.txt
frontend/MoneyInOne/MoneyInOne/: ContentView.swift  Info.plist  MoneyInOneApp.swift  Persistence.swift
frontend/MoneyInOne/MoneyInOne.xcodeproj/: project.pbxproj
frontend/MoneyInOne/MoneyInOne/App/: AppCoordinator.swift
frontend/MoneyInOne/MoneyInOne/Models/: Asset.swift  Credit.swift  Currency.swift  FinancialItem.swift  FormMode.swift  Portfolio.swift
frontend/MoneyInOne/MoneyInOne/MoneyInOne.xcdatamodeld/: .xccurrentversion
frontend/MoneyInOne/MoneyInOne/Services/: APIService.swift  AssetService.swift  CreditService.swift  MetadataService.swift  (+1 more)
frontend/MoneyInOne/MoneyInOneTests/: MoneyInOneTests.swift
frontend/MoneyInOne/MoneyInOneUITests/: MoneyInOneUITests.swift  MoneyInOneUITestsLaunchTests.swift
ux/: add_form.html  app_icon.html  delete_form.html  edit_form.html  main_page.html  record_list.html
(+32 files in other folders)
